--- a/webapp/firstRequest/sample1.html
+++ b/webapp/firstRequest/sample1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script
       id="sap-ui-bootstrap"
-      src="../resources/sap-ui-core.js"
+      src="https://openui5.hana.ondemand.com"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
 			"luigi.demo.sample1": "./","luigi.demo":"../"
