--- a/webapp/firstTest/sample2.html
+++ b/webapp/firstTest/sample2.html
@@ -6,7 +6,7 @@
     <title>Navigation and Routing Tutorial</title>
     <script
       id="sap-ui-bootstrap"
-      src="../resources/sap-ui-core.js"
+      src="https://openui5.hana.ondemand.com"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
 			"luigi.demo.sample2": "./","luigi.demo":"../"
