--- a/webapp/openui5.html
+++ b/webapp/openui5.html
@@ -6,7 +6,7 @@
     <title>OpenUI5 used with the Luigi Framework</title>
     <script
       id="sap-ui-bootstrap"
-      src="resources/sap-ui-core.js"
+      src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
 			"luigi.demo": "./", "luigi.demo.sample1": "./sample1", "luigi.demo.sample2": "./sample2"
