--- a/webapp/1_apiClient/settingProxy/sample1.html
+++ b/webapp/1_apiClient/settingProxy/sample1.html
@@ -3,28 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Postman Tutorial</title>
-   
+    <title>Navigation and Routing Tutorial</title>
+    <link rel="stylesheet" href="../../common/style.css">
     <script
       id="sap-ui-bootstrap"
       src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
-			"luigi.demo": "./", "qldh.firstRequest": "./sample1", "qldh.importRequest": "./importRequest",  "qldh.firstTest": "./firstTest"
+			"qldh.settingProxy": "./","luigi.demo":"../../"
 		}'
-      data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
-      data-sap-ui-compatVersion="edge"
-      data-sap-ui-language="en"
+      data-sap-ui-oninit="module:qldh/settingProxy/index"
       data-sap-ui-logLevel="none"
+      data-sap-ui-language="en"
       data-sap-ui-async="true"
     ></script>
   </head>
   <body class="sapUiBody">
+    <canvas id='myCanvas' width='1200' height='800' style="position: fixed;"></canvas>
     <div
       data-sap-ui-component
-      data-name="luigi.demo"
+      data-name="qldh.settingProxy"
       data-id="container"
       data-settings='{"id" : "app"}'
+      id="content"
     ></div>
+    <script>
+      
+      </script>
   </body>
 </html>
