--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,12 +1,23 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Luigi</title>
+    
+    <title>Postman Tutorial</title>
+    <link rel="icon" 
+    type="image/png" 
+    href="./logo.png">
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <link rel="stylesheet" href="libs/luigi-core/luigi.css" />
+    <link rel="stylesheet" href="./common/style.css" />
+    <style>
+      :root{--luigi__left-sidenav--width: 20rem;}
+    
+
+    </style>
   </head>
 
   <body>
