--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="libs/luigi-core/luigi.js"></script>
-    <script src="/luigi-config.js"></script>
+    <script src="./luigi-config.js"></script>
   </body>
 </html>
