--- a/1_apiClient/firstRequest/sample1.html
+++ b/1_apiClient/firstRequest/sample1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../common/style.css">
     <script
       id="sap-ui-bootstrap"
-      src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+      src="/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
 			"qldh.firstRequest": "./","luigi.demo":"../../"
