--- a/openui5.html
+++ b/openui5.html
@@ -7,7 +7,7 @@
    
     <script
       id="sap-ui-bootstrap"
-      src="./resources/sap-ui-core.js"
+      src="./https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-resourceroots='{
 			"luigi.demo": "./", "qldh.firstRequest": "./sample1", "qldh.importRequest": "./importRequest",  "qldh.firstTest": "./firstTest"
