--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,7 +16,7 @@
 
     <script 
     id="sap-ui-bootstrap"            
-    src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" 
+    src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js" 
     data-sap-ui-libs="sap.m, sap.ui.core"
     data-sap-ui-theme="sap_fiori_3" 
     data-sap-ui-preload="async" >
