--- a/2_writingTests/firstTest/sample2.html
+++ b/2_writingTests/firstTest/sample2.html
@@ -28,5 +28,6 @@
       data-settings='{"id" : "app"}'
       id="content"
     ></div>
+    <iframe  id="myFrame" class="embed"  src="https://giphy.com/embed/IwAZ6dvvvaTtdI8SD5" width="480" height="400" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/theoffice-the-office-tv-michaels-birthday-IwAZ6dvvvaTtdI8SD5">via GIPHY</a></p>
   </body>
 </html>
