--- a/4_collections/collections/collection.html
+++ b/4_collections/collections/collection.html
@@ -28,6 +28,6 @@
       data-settings='{"id" : "app"}'
       id="content"
     ></div>
-    <iframe id="myFrame" class="embed" src="https://giphy.com/embed/NXp9HM6YeuS0U" width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    <iframe id="myFrame" style="visibility: hidden"  class="embed" src="https://giphy.com/embed/NXp9HM6YeuS0U" width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
   </body>
 </html>
