--- a/4_collections/environments/environment.html
+++ b/4_collections/environments/environment.html
@@ -28,7 +28,7 @@
       data-settings='{"id" : "app"}'
       id="content"
     ></div>
-    <iframe id="myFrame" class="embed" src="https://giphy.com/embed/YQitE4YNQNahy"  width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    <iframe id="myFrame" style="visibility: hidden" class="embed" src="https://giphy.com/embed/YQitE4YNQNahy"  width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
   </body>
 </html>
 
